# carma

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/migrations/: 0001_gtfs_schema.sql  0002_realtime_delays.sql  0003_vehicle_positions.sql
backend/src/carma/adapters/: gtfs_rt.py  gtfs_static.py  http_feed.py  kafka.py  migrations.py  optimize_cpsat.py  optimize_heuristic.py  postgis_delays.py  postgis_positions.py  postgis_schedule.py  trip_delay_json.py
backend/src/carma/application/: polling.py  ports.py  position_stream.py  use_cases.py
backend/src/carma/domain/: errors.py  feed_health.py  geometry.py  headway.py  models.py  positioning.py  service_days.py
backend/src/carma/entrypoints/: api.py  cli.py  logs.py
backend/tests/: conftest.py  gtfs_fixture.py  test_api.py  test_feed_health.py  test_gtfs_rt_decoder.py  test_gtfs_static.py  test_headway.py  test_http_feed.py  test_kafka_integration.py  test_kafka_publisher.py  test_optimize_engines.py  test_optimize_integration.py  test_optimize_use_case.py  test_pipeline_lifecycle.py  test_polling.py  test_position_stream.py  test_positioning.py  test_positions_integration.py  test_postgis_integration.py  test_service_days.py  test_trip_delay_json.py  test_use_cases.py
backend/tests/fixtures/: vbb-tripupdates-sample.pb
docs/: execution-plan.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Banner.tsx  EmptyState.tsx  Header.tsx  LegendStats.tsx  LineFilter.tsx  MapCanvas.tsx  OptimizePanel.tsx  SelectedPanel.tsx
frontend/src/lib/: helpers.test.ts  (+12 more)
infra/: docker-compose.yml
infra/k8s/: README.md  api.yaml  configmap.yaml  consumer.yaml  kafka.yaml  kustomization.yaml  migrate-job.yaml  namespace.yaml  poller.yaml  postgis.yaml  projector.yaml  secret.example.yaml
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
scripts/: down.sh  k8s-down.sh  k8s-up.sh  up.sh
