[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "carma"
version = "0.1.0"
description = "Real-time Berlin transit monitoring and network-planning demo"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "confluent-kafka>=2.5",
    "gtfs-realtime-bindings>=1.0",
    "ortools>=9.10",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "mypy>=1.10",
    "ruff>=0.5",
    "import-linter>=2.0",
    "types-protobuf>=5.26",
    "testcontainers[postgres]>=4.7",
]

[project.scripts]
carma-migrate = "carma.entrypoints.cli:migrate"
carma-load-gtfs = "carma.entrypoints.cli:load_gtfs"
carma-poll-feed = "carma.entrypoints.cli:poll_feed"
carma-consume-trip-updates = "carma.entrypoints.cli:consume_trip_updates"
carma-project-positions = "carma.entrypoints.cli:project_positions"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: needs a Docker daemon (Testcontainers PostGIS/Kafka); skipped when unavailable",
]

[tool.mypy]
strict = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
# gtfs-realtime-bindings ships generated protobuf modules without py.typed.
module = "google.transit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# ortools types its cp_model subpackage but ships no root py.typed marker.
module = "ortools.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.importlinter]
root_package = "carma"

[[tool.importlinter.contracts]]
name = "Hexagonal layering (domain <- application <- adapters <- entrypoints)"
type = "layers"
layers = [
    "carma.entrypoints",
    "carma.adapters",
    "carma.application",
    "carma.domain",
]
